Fix overflowing menu, delete obseletes (#3)
* Fix overflowing menu, delete obseletes

* Add ProfileCard, modify theme, delete old imports

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+  align-items: center;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -17,6 +18,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  width: 345px;
+  height: auto;
+  margin: 0 auto;
+  padding: 10px;
+  position: relative;
 }
 
 code {
